# ifol-render

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build-local-wasm.bat  check_wasm.rs  dev.bat  start-dev.bat  temp_export.json  test_blur.json  test_node.js  test_save.json  test_wasm.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audio/: Cargo.toml
audio/src/: clip.rs  decoder.rs  effects.rs  encoder.rs  lib.rs  mixer.rs
core/: Cargo.toml
core/docs/: CORE.md
core/src/: audio.rs  compiler.rs  draw.rs  engine.rs  frame.rs  lib.rs  scene.rs  shaders.rs  sysinfo.rs  text.rs  types.rs  video.rs  video_stream.rs
core/src/backend/: ffmpeg.rs  media.rs  mod.rs
core/src/commands/: entity.rs  mod.rs  property.rs
core/src/ecs/: components.rs  draw.rs  mod.rs  pipeline.rs  systems.rs
core/src/ecs/components/: animation.rs  appearance.rs  camera.rs  effects.rs  mod.rs  sources.rs  timeline.rs  transform.rs
core/src/ecs/systems/: animation.rs  effects.rs  mod.rs  timeline.rs  transform.rs
core/src/export/: ffmpeg.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/docs/: CLI.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  color.rs  frame.rs  lib.rs  scene.rs  time.rs  types.rs
crates/core/src/ecs/: components.rs  mod.rs  pipeline.rs  registry.rs  systems.rs  tests.rs  typemap.rs
crates/core/src/ecs/components/: animation.rs  camera.rs  compositing.rs  composition.rs  draw.rs  fit_mode.rs  material.rs  media.rs  meta.rs  mod.rs  playback.rs  rect.rs  shape.rs  timeline.rs  transform.rs  visual.rs
crates/core/src/ecs/systems/: animation_sys.rs  audio_sys.rs  composition_sys.rs  culling_sys.rs  editor_gizmo_sys.rs  hierarchy_sys.rs  hit_test.rs  material_sys.rs  mod.rs  rect_sys.rs  render_sys.rs  source_sys.rs  speed_sys.rs  time_sys.rs  timeline_sys.rs  transform_sys.rs  visual_sys.rs
crates/core/src/schema/: mod.rs  tracks.rs  v2.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: engine.rs  lib.rs  render_graph.rs  resource_manager.rs  vertex.rs
crates/gpu/src/passes/: clear.rs  composite.rs
crates/server/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/src/: audio_manager.rs  lib.rs  media_manager.rs  web_backend.rs
docs/: ARCHITECTURE.md  ASSET_MANAGEMENT.md  AUDIO_SYSTEM.md  CLI_GUIDE.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  RELEASE_GUIDE.md  ROADMAP.md  TEST_CASES.md  UNIT_SYSTEM.md  USER_GUIDE.md  creating-effects.md  frame-data-spec.md
editor/: Cargo.toml
editor/src/: app.rs  main.rs
editor/src/ui/: mod.rs  timeline.rs
examples/: animated_scene.json  comprehensive_test.json  simple_scene.json  test_frame.json  test_phase5_9.json  test_render.json
render/: Cargo.toml
render/docs/: RENDER.md
render/src/: engine.rs  lib.rs  render_graph.rs  resource_manager.rs  vertex.rs
render/src/effects/: blur.rs  color_grade.rs  context.rs  mod.rs  pipeline_cache.rs
render/src/engine/: gpu.rs  mod.rs  texture_cache.rs
render/src/passes/: clear.rs  composite.rs  mod.rs
scripts/: build_release.ps1  generate_full_movie.py  generate_test_scene.py  patch_wasm_pkg.ps1
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/docs/: GUIDE.md
sdk/examples/: basic.ts  dual-viewport.ts  particles.ts
sdk/src/: animation.ts  assets.ts  audio.ts  builders.ts  camera.ts  flatten.ts  flattener.ts  index.ts  render-view.ts  ring-buffer.ts  scene.ts  timeline.ts  types.ts
shaders/: blur.wgsl  color_adjust.wgsl  color_grade.wgsl  composite.wgsl  dashed_rect.wgsl  gradient.wgsl  mask.wgsl  passthrough.wgsl  quad.wgsl  shapes.wgsl
shaders/effects/: blur.wgsl  chromatic_aberration.wgsl  color_grade.wgsl  drop_shadow.wgsl  glow.wgsl  mask_composite.wgsl  selection_outline.wgsl  vignette.wgsl
studio/: Cargo.toml  build.rs
studio/docs/: STUDIO.md
studio/src/: app.rs  main.rs
studio/src/panels/: entity_list.rs  mod.rs  properties.rs  status_bar.rs  timeline.rs  top_bar.rs  viewport.rs  workspace.rs
studio/src/ui/: mod.rs
tests/output/: .gitignore
web/: asset-server.py  ecs-test.js  index.html  main.js  package-lock.json  package.json  server.py  start-test.bat  start.bat  tc19_super_stress.js  test-sdk.html  vite.config.js
web/examples/: 01-minimal.html  02-image.html  03-export.html  blur.wgsl  drop_shadow.wgsl  glow.wgsl
