[package]
name = "ifol-render-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core ECS, components, systems, commands, and pipeline orchestration for ifol-render."

[dependencies]
ifol-render = { path = "../render" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
