[package]
name = "ifol-render-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core ECS, components, systems, commands, and pipeline orchestration for ifol-render."

[dependencies]
ifol-render = { path = "../render" }
ifol-audio = { path = "../audio" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window"] }
