[package]
name = "ifol-render-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone GUI editor for ifol-render."

[dependencies]
ifol-render-core = { path = "../crates/core" }
ifol-render-gpu = { path = "../crates/gpu" }
eframe = { workspace = true }
egui = "0.31"
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
rfd = "0.15"
