[package]
name = "ifol-render-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal Frame JSON viewer for ifol-render. Load, seek, preview, render."

[[bin]]
name = "ifol-render-studio"
path = "src/main.rs"

[dependencies]
ifol-render-core = { path = "../core" }
eframe = { workspace = true }
egui = "0.31"
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = "0.15"
rodio = "0.19"
