[package]
name = "ifol-render-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for ifol-render — headless rendering and export."

[[bin]]
name = "ifol-render"
path = "src/main.rs"

[dependencies]
ifol-render-core = { path = "../../core" }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
