[package]
name = "ifol-render-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core ECS, components, systems, datatypes, and color management for ifol-render."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
