[package]
name = "ifol-render-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU rendering backend using wgpu for ifol-render."

[dependencies]
ifol-render-core = { path = "../core" }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
